--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0%; padding:0%;
     box-sizing: broder-box;
-
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)) ,url(images/pc3.jpg);
@@ -23,7 +23,7 @@ nav{
 
 nav .logo{
     width: 35%;
-    font-style: italic;
+    
     text-align:right;
   padding-right: 450px;
     
@@ -69,7 +69,7 @@ main{
 section h3{
   font-size: 35px;
  font-weight: 300;
- letter-spacing: 3px; font-style: italic;
+ letter-spacing: 3px; 
  color: whitesmoke;
 }
 section h1{
@@ -112,59 +112,41 @@ p{
     
   }
 
- footer{
-    color: #00b894;
-    text-align: center;
+  footer{
+    background-color:black;
+    padding: 30px;
     display: flex;
-    opacity: rgba(0,0,0,0.2);
-    background-color: rgba(0,0,0,0.4);
-    font-size: 35px;
-    justify-content: center;
-    text-decoration: underline;
-    font-weight: 300; font-style: italic;
-    padding-left: 100px;
-    align-items: center;
+    color: #CDCDCD;
+    justify-content: space-around;
+}
 
- }
-h4 i{  
+ h2{margin: 30px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+     font-size: 26px;
+    font-weight: 100;
+}
+.info i{
     
-    color: #00b894;
-    text-align: center;
+    font-size: 20px;
+}
+.fa-envelope,.fa-location-dot{
+    color: #CDCDCD;
+}
+
+.icon{
+
     display: flex;
-    opacity: rgba(0,0,0,0.2);
-    background-color: rgba(0,0,0,0.4);
-    font-size: 35px;
-    justify-content: center;
-    text-decoration: underline;
-    font-weight: 300; font-style: italic;
-    padding-left: 100px;
     align-items: center;
-
-    font-size: 30px;
-    line-height: 60px;
-    transition: .6s;
-    color:rgb(133, 165, 195);
-    display: inline;
-  }
-
-h5 i{
-     
-    color: #00b894;
     text-align: center;
-    display: flex;
-    opacity: rgba(0,0,0,0.2);
-    background-color: rgba(0,0,0,0.4);
-    font-size: 35px;
-    justify-content: center;
-    text-decoration: underline;
-    font-weight: 300; font-style: italic;
-    padding-left: 100px;
-    align-items: center;
-
-    font-size: 30px;
-    line-height: 60px;
-    transition: .6s;
-    color:rgb(195, 133, 188);
-    display: inline;
-
-  }
+    margin-inline-end: 100px;
+    color: #CDCDCD;
+}
+.icon i{
+    margin: 15px;
+    font-size: 28px;
+    color: #CDCDCD;
+    cursor:pointer;
+}
+.p{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
