--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0%; padding:0%;
     box-sizing: broder-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 body{
     background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)) ,url(images/pc3.jpg);
@@ -23,9 +24,9 @@ nav{
 
 nav .logo{
     width: 35%;
-    
+
     text-align:right;
-  padding-right: 450px;
+  padding-right: 550px;
     
 }
 div
@@ -69,7 +70,7 @@ main{
 section h3{
   font-size: 35px;
  font-weight: 300;
- letter-spacing: 3px; 
+ letter-spacing: 3px; font-style: italic;
  color: whitesmoke;
 }
 section h1{
@@ -78,7 +79,7 @@ section h1{
  letter-spacing: 3px; font-style: italic;
  color: whitesmoke;
 }
-p{
+h4{
     font-size: 35px;
  font-weight: 300;
  letter-spacing: 3px; font-style: italic;
@@ -86,7 +87,7 @@ p{
 }
 .change_content:after {
     content: "";
-    animation: changetext 10s infinite linear;
+    animation: changetext 4s infinite linear;
     color: #00b894;
   }
   
@@ -110,8 +111,7 @@ p{
         content:"JAVA SCRIPT";
     }
     
-  }
-
+}
   footer{
     background-color:black;
     padding: 30px;
