--- a/style.css
+++ b/style.css
@@ -112,10 +112,9 @@ h4{
     }
     
 }
-  footer{
+   footer{
     background-color:black;
-    padding: 30px;
-    display: flex;
+    padding: 10px;
     color: #CDCDCD;
     justify-content: space-around;
 }
@@ -125,28 +124,27 @@ h4{
      font-size: 26px;
     font-weight: 100;
 }
-.info i{
-    
-    font-size: 20px;
-}
-.fa-envelope,.fa-location-dot{
-    color: #CDCDCD;
-}
 
-.icon{
 
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin-inline-end: 100px;
-    color: #CDCDCD;
-}
-.icon i{
-    margin: 15px;
-    font-size: 28px;
-    color: #CDCDCD;
-    cursor:pointer;
-}
+
 .p{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.back
+{
+    display: inline-block;
+    padding-left: 110px;
+}
+.yam
+{
+    display:flex;
+    margin-left: 400px;
+    align-items: center;
+}
+.creat
+{
+    font-size: x-large;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-bottom: 550px;
+
 }
