--- a/style.css
+++ b/style.css
@@ -22,23 +22,23 @@ nav{
     
 }
 
-nav .logo{
-    width: 35%;
-
+h1{
+    font-weight: 300;
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align:right;
-  padding-right: 550px;
+  padding-right: 500px;
     
 }
 div
 { 
       display: flex;
-    padding-left: 10px;
+    padding-left: 12px;
     padding-bottom: 10px;
     align-items: left;
    width: 120px;
    height: 120px;
     justify-content: space-between;
-    margin-top: 35px;
+    margin-top: 40px;
 }
 a{
     color: whitesmoke;
@@ -73,7 +73,7 @@ section h3{
  letter-spacing: 3px; font-style: italic;
  color: whitesmoke;
 }
-section h1{
+section h5{
     font-size: 35px;
  font-weight: 300;
  letter-spacing: 3px; font-style: italic;
@@ -112,39 +112,50 @@ h4{
     }
     
 }
-   footer{
-    background-color:black;
-    padding: 10px;
-    color: #CDCDCD;
-    justify-content: space-around;
-}
 
- h2{margin: 30px;
+.footer {
+    
+    background-color: black;
+    color: #cdcd;
+    padding: 5%;
+    padding-top: 0%;
+    
+}
+h2{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     font-size: 26px;
-    font-weight: 100;
+    font-size: 26px;
+   font-weight: 100;
 }
 
-
-
-.p{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.back
-{
+.right {
+    margin-top:0px ;
+    vertical-align: middle;
+    font-size: 20px;
     display: inline-block;
-    padding-left: 110px;
-}
-.yam
-{
-    display:flex;
-    margin-left: 400px;
-    align-items: center;
-}
-.creat
-{
-    font-size: x-large;
+    width: 130%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-bottom: 550px;
+    
+    
+}
+.icon a{
+    display:flex;
+    
+    align-items: center;
+    padding-left: 70px;
+    font-size: 200%;
+}
 
+.ff {
+    display: flex;
+    position: absolute;
+    right: 0%;
+    width: 30%;
+    padding-inline-end: 70px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 31px;
+    font-weight: 300;
+}
+::-webkit-scrollbar{
+    display: none;
+    color:#CDCD;
 }
